.apex/src/objects/OrderItem_c__c.object
<CustomObject>
    <fields>
        <fullName>OrderId__c</fullName>
        <label>OrderId</label>
        <referenceTo>Order_c__c</referenceTo>
        <relationshipLabel>OrderItems__c</relationshipLabel>
        <relationshipName>OrderItems_c</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductId__c</fullName>
        <label>ProductId</label>
        <referenceTo>Product_c__c</referenceTo>
        <relationshipLabel>OrderItems__c</relationshipLabel>
        <relationshipName>OrderItems_c</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>OrderItem__c</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OrderItems__c</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>